Closed
Bug 96506
Opened 24 years ago
Closed 22 years ago
overflow:visible not working on FIELDSETs
Categories
(Core :: Layout: Form Controls, defect)
Core
Layout: Form Controls
Tracking
()
RESOLVED
FIXED
People
(Reporter: r-mcdonald, Assigned: bernd_mozilla)
References
()
Details
(Keywords: css2, testcase)
Attachments
(3 files)
|
1.94 KB,
text/html
|
Details | |
|
126 bytes,
text/html
|
Details | |
|
988 bytes,
patch
|
dbaron
:
review+
dbaron
:
superreview+
|
Details | Diff | Splinter Review |
From Bugzilla Helper:
User-Agent: Mozilla/5.0 (Windows; U; WinNT4.0; en-US; rv:0.9.3) Gecko/20010801
BuildID: 2001080110
The "search via FirstGov now" button is positioned incorrectly, with part of the
button not doing anything. The page has a box which is drawn incorrectly. IE 5.5
seems to position everything right.
Reproducible: Always
Steps to Reproduce:
1. Go to the URL above.
2.
3.
Comment 1•24 years ago
|
||
Browser, not engine --> Layout
Assignee: rogerl → karnaze
Component: Javascript Engine → Layout
QA Contact: pschwartau → petersen
Comment 2•24 years ago
|
||
Comment 3•24 years ago
|
||
Problem seems to be a FIELDSET with a (insufficiently) specified CSS height.
Some form controls are not visible. ->HTMLFormControls for further triage.
Assignee: karnaze → rods
Component: Layout → HTML Form Controls
Keywords: testcase
QA Contact: petersen → madhur
Comment 4•24 years ago
|
||
No dupes found. Confirming and marking NEW.
This may end up as Evangelism, though.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Updated•24 years ago
|
Status: NEW → ASSIGNED
Target Milestone: --- → Future
Comment 5•24 years ago
|
||
The FIELDSET has a CSS specified height of 95px but the content requires more.
The current behaviour acts as if the FIELDSET has "overflow:hidden" but
I thought "overflow:visible" was the default. Do form controls have a different
default value for the CSS overflow property?
In fact, the testcase doesn't display differently even if I add "overflow:visible"
to the FIELDSET.
Keywords: css2
Reconfirmed using FizzillaCFM/2002071208. Setting All/All, and trying a revised
Summary. This probably belongs on Style System or Layout; trying Style System first.
Assignee: rods → dbaron
Status: ASSIGNED → NEW
Component: HTML Form Controls → Style System
OS: Windows NT → All
QA Contact: madhur → ian
Hardware: PC → All
Summary: Page rendered incorrectly → overflow:visible not working on FIELDSETs
No, this belongs in form controls. Fieldset is a hard-coded layout object
(nsIFrame) right now.
Assignee: dbaron → rods
Component: Style System → HTML Form Controls
QA Contact: ian → tpreston
Comment 8•23 years ago
|
||
.
Assignee: rods → form
QA Contact: tpreston → desale
Target Milestone: Future → ---
Comment 9•23 years ago
|
||
| Assignee | ||
Comment 10•22 years ago
|
||
Attachment #131809 -
Flags: superreview?(dbaron)
Attachment #131809 -
Flags: review?(dbaron)
Attachment #131809 -
Flags: superreview?(dbaron)
Attachment #131809 -
Flags: superreview+
Attachment #131809 -
Flags: review?(dbaron)
Attachment #131809 -
Flags: review+
| Assignee | ||
Comment 12•22 years ago
|
||
fix checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•