fieldset frames should report overflow area, bug 96506 r/sr=dbaron